Added code to create request to pull projects from backend.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+
+
       <link type="text/css" rel="stylesheet" href="css/styles.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,8 +15,9 @@
     <body>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-    <div><i class="material-icons dp48"></i></div>
-    <script src="elm.js"></script>
-    <script>Elm.Main.embed(document.querySelector("div"));</script>
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+      <div><i class="material-icons dp48"></i></div>
+      <script src="elm.js"></script>
+      <script>Elm.Main.embed(document.querySelector("div"));</script>
   </body>
