--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <link type="text/css" rel="stylesheet" href="css/styles.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <script src="https://apis.google.com/js/platform.js" async defer></script>
+      <meta name="google-signin-client_id" content="928747309344-42eh5rbv07ttbiuc9gih0ncjpbmco306.apps.googleusercontent.com">
+
     </head>
 
     <body>
@@ -18,6 +21,8 @@
       <!-- Compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
       <div><i class="material-icons dp48"></i></div>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
       <script src="elm.js"></script>
       <script>Elm.Main.embed(document.querySelector("div"));</script>
+
   </body>
