Removed unused i tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <!-- Compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
-      <div><i class="material-icons dp48"></i></div>
+      <div></div>
       <script src="elm.js"></script>
       <script>Elm.Main.embed(document.querySelector("div"));</script>
   </body>
