Added changes to enable using global env variables for api

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
       <div></div>
       <script src="elm.js"></script>
-      <script>Elm.Main.embed(document.querySelector("div"));</script>
+      <script>Elm.Main.embed(document.querySelector("div"), {api: "http://localhost:4000"});</script>
 
   </body>
